src/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomark-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: gomark-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
